# mcp-hello-tools

./: Cargo.toml  README.md  claude_desktop_config.json
src/: main.rs  server.rs
src/tools/: calculate.rs  echo.rs  mod.rs  timestamp.rs
