[package]
name = "mcp-hello-tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-hello-tools"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.1.0", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4" }
chrono-tz = "0.10"
meval = "0.2"
anyhow = "1"
